fixed overlapping navbar in small devices

--- a/CSS/television.css
+++ b/CSS/television.css
@@ -287,4 +287,7 @@ nav {
         width: 90%;
         margin-bottom: 20px;
     }
+    .header{
+        margin-top: 120px;
+    }
 }
